# codex-obsidian-memory

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
Codex Memory/: 00 - Start Here.md
Codex Memory/10 - Core/: Decisions.md  Preferences.md  Rules.md  Workflows.md
Codex Memory/20 - Projects/: Codex Obsidian Memory.md  README.md
Codex Memory/90 - Inbox/: Memory Inbox.md
Codex Memory/Templates/: Decision Template.md  Project Memory Template.md
docs/: codex-mcp.md  rag-v0.md
src/obsidian_rag/: __init__.py  chunking.py  cli.py  index.py  server.py
tests/: test_chunking.py  test_index.py
